--- a/index.html
+++ b/index.html
@@ -14,8 +14,25 @@
     <title>Frontend Mentor | Product preview card component</title>
   </head>
   <body>
-    Preview Gabrielle Essence Eau De Parfum A floral, solar and voluptuous
-    interpretation composed by Olivier Polge, Perfumer-Creator for the House of
-    CHANEL. $149.99 $169.99 Add to Cart
+    <main>
+      <div class="card">
+        <header></header>
+
+        <div class="content">
+          <h3>perfume</h3>
+          <h1>Preview Gabrielle Essence Eau De Parfum</h1>
+          <p>
+            Preview Gabrielle Essence Eau De Parfum A floral, solar and
+            voluptuous interpretation composed by Olivier Polge,
+            Perfumer-Creator for the House of CHANEL.
+          </p>
+          <div class="price">
+            <p>$149.99</p>
+            <p>$169.99</p>
+          </div>
+        </div>
+        <a href="#">Add to Cart</a>
+      </div>
+    </main>
   </body>
 </html>
