--- a/index.html
+++ b/index.html
@@ -3,12 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
       href="./images/favicon-32x32.png"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,500;1,9..144,700&family=Montserrat:wght@400;700&display=swap"
+      rel="stylesheet"
     />
     <link rel="stylesheet" href="css/style.css" />
     <title>Frontend Mentor | Product preview card component</title>
@@ -20,18 +25,17 @@
 
         <div class="content">
           <h3>perfume</h3>
-          <h1>Preview Gabrielle Essence Eau De Parfum</h1>
+          <h1>Gabrielle Essence Eau De Parfum</h1>
           <p>
-            Preview Gabrielle Essence Eau De Parfum A floral, solar and
-            voluptuous interpretation composed by Olivier Polge,
-            Perfumer-Creator for the House of CHANEL.
+            A floral, solar and voluptuous interpretation composed by Olivier
+            Polge, Perfumer-Creator for the House of CHANEL.
           </p>
           <div class="price">
             <p>$149.99</p>
-            <p>$169.99</p>
+            <p><del>$169.99</del></p>
           </div>
+          <a class="btn" href="#">Add to Cart</a>
         </div>
-        <a href="#">Add to Cart</a>
       </div>
     </main>
   </body>
