--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
             <p>$149.99</p>
             <p><del>$169.99</del></p>
           </div>
-          <a class="btn" href="#">Add to Cart</a>
+          <a class="btn" href="#">
+            <img src="./images/icon-cart.svg" alt="" />
+            <p>Add to Cart</p></a
+          >
         </div>
       </div>
     </main>
