--- a/index.html
+++ b/index.html
@@ -9,37 +9,17 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,500;1,9..144,700&family=Montserrat:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
+
     <link rel="stylesheet" href="css/style.css" />
     <title>Frontend Mentor | Product preview card component</title>
   </head>
   <body>
     <main>
-      <div class="card">
-        <header></header>
-
-        <div class="content">
-          <h3>perfume</h3>
-          <h1>Gabrielle Essence Eau De Parfum</h1>
-          <p>
-            A floral, solar and voluptuous interpretation composed by Olivier
-            Polge, Perfumer-Creator for the House of CHANEL.
-          </p>
-          <div class="price">
-            <p>$149.99</p>
-            <p><del>$169.99</del></p>
-          </div>
-          <a class="btn" href="#">
-            <img src="./images/icon-cart.svg" alt="" />
-            <p>Add to Cart</p></a
-          >
-        </div>
-      </div>
+      <article class="product">
+        perfume Gabrielle Essence Eau De Parfum A floral, solar and voluptuous
+        interpretation composed by Olivier Polge, Perfumer-Creator for the House
+        of CHANEL. $149.99 $169.99 Add to Cart
+      </article>
     </main>
   </body>
 </html>
