--- a/index.html
+++ b/index.html
@@ -9,16 +9,31 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-
     <link rel="stylesheet" href="css/style.css" />
     <title>Frontend Mentor | Product preview card component</title>
   </head>
   <body>
     <main>
       <article class="product">
-        perfume Gabrielle Essence Eau De Parfum A floral, solar and voluptuous
-        interpretation composed by Olivier Polge, Perfumer-Creator for the House
-        of CHANEL. $149.99 $169.99 Add to Cart
+        <picture class="product-img">
+          <img src="" alt="" />
+        </picture>
+
+        <div class="product-content">
+          <p class="product-category">Perfume</p>
+
+          <h1 class="product-title">Gabrielle EssenceEau De Parfum</h1>
+          <p>
+            A floral, solar and voluptuous interpretation composed by Olivier
+            Polge, Perfumer-Creator for the House of CHANEL.
+          </p>
+          <div class="price">
+            <p class="product-price">$149.99</p>
+            <p class="product-original-price">$169.99</p>
+          </div>
+
+          <button class="button">Add to Cart</button>
+        </div>
       </article>
     </main>
   </body>
