--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
+    <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/style.css" />
     <title>Frontend Mentor | Product preview card component</title>
   </head>
@@ -16,7 +17,10 @@
     <main>
       <article class="product">
         <picture class="product-img">
-          <img src="" alt="" />
+          <img
+            src="images/image-product-mobile.jpg"
+            alt="Gabrielle chanel parfume"
+          />
         </picture>
 
         <div class="product-content">
