--- a/index.html
+++ b/index.html
@@ -22,8 +22,16 @@
   <body>
     <main>
       <article class="product">
-        <picture class="product-img">
+        <picture>
+          <source
+            class="mobile-img"
+            srcset="images/image-product-desktop.jpg"
+            alt="Gabrielle chanel parfume"
+            media="(min-width:600px)"
+          />
+
           <img
+            class="desktop-img"
             src="images/image-product-mobile.jpg"
             alt="Gabrielle chanel parfume"
           />
@@ -38,8 +46,14 @@
             Polge, Perfumer-Creator for the House of CHANEL.
           </p>
           <div class="price">
-            <p class="product-price">$149.99</p>
-            <p class="product-original-price">$169.99</p>
+            <p class="product-price">
+              <span class="sr-only">Current price:</span>
+              $149.99
+            </p>
+            <p class="product-original-price">
+              <span class="sr-only">Original price:</span>
+              <s>$169.99</s>
+            </p>
           </div>
 
           <button class="button">Add to Cart</button>
